--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-youtube": "^7.11.2",
     "styled-components": "^5.0.1"
   },
   "scripts": {
