--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connected-react-router": "^6.7.0",
     "cross-env": "^7.0.0",
     "customize-cra": "^0.9.1",
+    "formik": "^2.1.4",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -18,7 +19,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-youtube": "^7.11.2",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
