--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "customize-cra": "^0.9.1",
     "formik": "^2.1.4",
     "history": "^4.10.1",
+    "polished": "^3.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-circular-progressbar": "^2.0.3",
